fix textAlign + add dots for slider

--- a/src/components/MainPage/Home.css
+++ b/src/components/MainPage/Home.css
@@ -1,3 +1,8 @@
+.home .container {
+  justify-content: space-between;
+  width: 90%;
+  max-width: 90%;
+}
 .homeSlide h1 {
   font-size: 45px;
   line-height: 55px;
@@ -19,9 +24,11 @@
   background: transparent !important;
   color: transparent !important;
 }
-.homeSlide .container{
-  width: 90%;
-  height: 90%;
+.homeSlide .container {
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+  margin: 0px;
 }
 .homeSlide ul li button::before {
   font-size: 15px !important;
@@ -32,14 +39,14 @@
   margin: auto;
 }
 
-.mainpage_categories_viewAll{
+.mainpage_categories_viewAll {
   text-align: center;
   margin: 10px;
   padding: 5px 10px !important;
   border-radius: 5px;
 }
 
-.slider-box{
+.slider-box {
   width: 100%;
   margin: 0px;
   padding: 5px 10px;
@@ -48,20 +55,25 @@
   display: flex;
   justify-content: space-between;
 }
-.slick-slider{
-  height: 100%;
+.slider-box .left button {
+  cursor: pointer;
 }
-.slick-slider .left{
+.slick-slider {
+  height: 100%;
+  width: 100%;
+}
+.slick-slider .left {
   flex: 1;
+  margin-right: 20px;
 }
 
-.slider-box .right{
+.slider-box .right {
   flex: 1;
   width: 100%;
   display: flex;
   justify-content: space-between;
 }
-.slick-slider .right img{
+.slick-slider .right img {
   width: 100%;
   height: fit-content;
   object-fit: contain;
@@ -69,17 +81,17 @@
 }
 
 @media screen and (max-width: 768px) {
-  .home{
+  .home {
     margin: 5px;
   }
   .home .container {
     max-width: 100%;
     height: 200px;
   }
-  .home .container .category{
+  .home .container .category {
     display: none;
   }
-  .homeSlide{
+  .homeSlide {
     margin-top: 10px;
   }
   .homeSlide h1 {
@@ -111,14 +123,14 @@
     left: 0;
     margin: auto;
   }
-  .homeSlide .container .slick-slider{
+  .homeSlide .container .slick-slider {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     /* align-items: center; */
     height: 100%;
   }
-  .slider-box{
+  .slider-box {
     width: 100%;
     height: 100%;
     margin: 0px;
@@ -134,10 +146,10 @@
   .slider-box .left p {
     font-size: 13px;
   }
-  .slider-box .right{
+  .slider-box .right {
     position: relative;
   }
-  .slider-box .right img{
+  .slider-box .right img {
     width: 100%;
   }
 }
